<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flat_flesh">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/reef_encounter"
            android:textSize="18dp"
            android:text="@string/faq_question1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_gravity="center_vertical|start"
            android:gravity="start"
            android:text="@string/faq_answer1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/reef_encounter"
            android:textSize="18dp"
            android:text="@string/faq_question2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_gravity="center_vertical|start"
            android:gravity="start"
            android:text="@string/faq_answer2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/reef_encounter"
            android:textSize="18dp"
            android:text="@string/faq_question3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_gravity="center_vertical|start"
            android:gravity="start"
            android:text="@string/faq_answer3"/>

    </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>