<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <ImageView
            android:contentDescription="@string/logo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_yb_stroked"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"/>

        <Button
            android:id="@+id/login_um_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_um"
            android:textColor="@color/dark_Green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/button_green"
            android:padding="5dp"
            android:layout_marginBottom="50dp"
            android:onClick="loginViaUm"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>