<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/logo_yb_stroked" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/payment_mode"
                    android:textAlignment="center"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/amount_to_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/pay_cash_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_green"
                    android:text="@string/via_cash"
                    android:textColor="@color/dark_Green" />

                <Button
                    android:id="@+id/pay_bancontact_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_green"
                    android:padding="5dp"
                    android:text="@string/via_bc"
                    android:textColor="@color/dark_Green" />

                <ProgressBar
                    android:id="@+id/pay_progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/bancontact_qrcode"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginBottom="5dp" />

                <Button
                    android:id="@+id/pay_done_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_green"
                    android:padding="5dp"
                    android:text="@string/done_payment"
                    android:textColor="@color/dark_Green" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>