<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_manually_barcode_instructions"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/input_barcode_value"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:background="@drawable/button_green"
            android:onClick="askForTicketValidation"
            android:textColor="@color/dark_Green"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/button_green"
            android:onClick="goBack"
            android:textColor="@color/dark_Green"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>