<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/audience_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/audience_btn_all"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:text="@string/audience_btn_all" />

            <Button
                android:id="@+id/audience_btn_in"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:text="@string/audience_btn_in" />

            <Button
                android:id="@+id/audience_btn_out"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/audience_btn_out" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/audience_lines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:id="@+id/audience_underline_all"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginRight="10dp"
                android:background="@color/dark_Green" />

            <View
                android:id="@+id/audience_underline_in"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginRight="10dp" />

            <View
                android:id="@+id/audience_underline_out"
                android:layout_width="100dp"
                android:layout_height="2dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/audience_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/audience_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:screenOrientation="portrait"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audience_tabs"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>